Navbar is now fixed, solved problem with mobile menu overflow

--- a/src/sass/components/mobileMenu.scss
+++ b/src/sass/components/mobileMenu.scss
@@ -1,10 +1,10 @@
 .nav__menu {
   .nav__menu--mobile {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     position: absolute;
     top: 0;
-    right: -100%;
+    transform: translateX(100%);
 
     display: flex;
     flex-direction: column;
@@ -21,6 +21,7 @@
   }
 
   .nav__menu--mobile.open {
-    right: 0;
+    transform: translateX(0);
   }
 }
+
