--- a/src/sass/layout/banner.scss
+++ b/src/sass/layout/banner.scss
@@ -1,10 +1,11 @@
 @use '../utilities/mixins.scss' as *;
 
 .nav {
+  position: fixed;
+  top: 0;
   width: 100%;
   min-height: 65px;
-
-  background-color: var(--main-bg-color);
+  background-color: var(--main-bg);
   font-weight: 500;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 
@@ -19,6 +20,7 @@
     }
     .nav__menu {
       margin-left: auto;
+      overflow: hidden;
 
       .nav__menu--desktop {
         display: flex;
@@ -32,3 +34,4 @@
     }
   }
 }
+
