--- a/src/sass/utilities/helpers.scss
+++ b/src/sass/utilities/helpers.scss
@@ -7,6 +7,9 @@
   display: none;
 }
 
-// .desktop-hidden {
-//   display: none;
-// }
+@media screen and (min-width: 1024px) {
+  .desktop-hidden {
+    display: none;
+  }
+}
+
